--- a/election-api-java/build.gradle
+++ b/election-api-java/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.6'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+	id 'org.springframework.boot' version '2.6.6'
 }
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java'
 
 group = 'bbc.news'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+java.toolchain.languageVersion = JavaLanguageVersion.of(11)
 
 repositories {
 	mavenCentral()
