--- a/election-ui-javascript/package.json
+++ b/election-ui-javascript/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npx parcel src/index.html",
+    "start": "parcel src/index.html",
     "build": "parcel build src/index.html",
     "test": "jest --watch"
   },
