--- a/election-api-javascript/package.json
+++ b/election-api-javascript/package.json
@@ -8,7 +8,8 @@
     "test": "jest"
   },
   "author": "BBC News and Weather Apps",
-  "license": "ISC",
+  "private": true,
+  "license": "APACHE-2.0",
   "devDependencies": {
     "jest": "^27.0.4",
     "supertest": "^6.1.3"
