--- a/election-ui-javascript/public/manifest.json
+++ b/election-ui-javascript/public/manifest.json
@@ -1,7 +1,13 @@
 {
-  "short_name": "App",
-  "name": "Example app",
-  "icons": [],
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
