--- a/election-ui-javascript/public/manifest.json
+++ b/election-ui-javascript/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BBC Election UI example",
+  "name": "An example application to display election results",
   "icons": [
     {
       "src": "favicon.ico",
