--- a/election-api-typescript/package.json
+++ b/election-api-typescript/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "BBC",
   "license": "ISC",
+  "private": true,
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
