--- a/election-api-typescript/package.json
+++ b/election-api-typescript/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js and TypeScript coding test",
   "main": "/dist/src/index.js",
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
     "build:watch": "tsc -w",
     "test": "prettier --loglevel=error --write * && jest"
@@ -26,6 +26,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
