--- a/election-api-javascript/package.json
+++ b/election-api-javascript/package.json
@@ -5,16 +5,16 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "prettier --loglevel=error --write * && jest"
+    "test": "prettier --log-level=error --write * && jest"
   },
   "author": "BBC News and Weather Apps",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.0.4",
-    "prettier": "^2.8.4",
-    "supertest": "^6.1.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.19.2"
   }
 }
