Use jvmToolchain to simplify java versions

--- a/election-ui-kotlin/appWithComposeUI/build.gradle
+++ b/election-ui-kotlin/appWithComposeUI/build.gradle
@@ -27,18 +27,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
+    kotlin {
+        jvmToolchain(java_version)
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.5.15"
+        kotlinCompilerExtensionVersion kotlin_compiler_version
     }
     packagingOptions {
         resources {
