--- a/election-ui-kotlin/appWithXmlUI/build.gradle
+++ b/election-ui-kotlin/appWithXmlUI/build.gradle
@@ -26,12 +26,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
+    kotlin {
+        jvmToolchain(java_version)
     }
     buildFeatures {
         viewBinding true
