--- a/election-ui-kotlin/build.gradle
+++ b/election-ui-kotlin/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext {
+        java_version = 11
         androidx_activity_compose_version = '1.9.3'
         androidx_activity_version = '1.9.3'
         androidx_appcompat_version = '1.7.0'
@@ -12,6 +13,7 @@ buildscript {
         compose_version = '1.7.5'
         junit_version = '4.13.2'
         kotlin_version = '1.9.25'
+        kotlin_compiler_version = '1.5.15'
         kotlinx_coroutines_version = '1.6.2'
         kotlinx_serialization_version = '1.3.3'
         material_version = '1.12.0'
