[election-ui-kotlin] - Work better with edge to edge enabled (#136)
* Work better with edge to edge enabled and dependency updates

* Fix floating action button being hidden behind bottom bar.

* Use jvmToolchain to simplify java versions

* Padding to make UI a bit clearer (and in line with XML UI)

--- a/election-ui-kotlin/appWithXmlUI/build.gradle
+++ b/election-ui-kotlin/appWithXmlUI/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -24,12 +26,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    kotlin {
+        jvmToolchain(java_version)
     }
     buildFeatures {
         viewBinding true
@@ -40,6 +38,7 @@ dependencies {
     implementation project(":api")
 
     implementation "androidx.core:core-ktx:$androidx_core_version"
+    implementation "androidx.activity:activity-ktx:$androidx_activity_version"
     implementation "androidx.fragment:fragment-ktx:$androidx_fragment_version"
     implementation "androidx.appcompat:appcompat:$androidx_appcompat_version"
     implementation "com.google.android.material:material:$material_version"
@@ -56,7 +55,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso_version"
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
     }
