--- a/election-ui-javascript/package.json
+++ b/election-ui-javascript/package.json
@@ -1,15 +1,19 @@
 {
   "name": "elections-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "6.8.0",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "react": "19",
+    "react-dom": "19.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "5.1.0"
+  },
+  "overrides": {
+    "nth-check": "2.1.1",
+    "postcss": "8.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
